--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.8",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "typescript": "^5.1.3"
   }
 }
