--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pargeo",
-  "version": "0.9.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -28,5 +28,14 @@
     "eslint-config-next": "12.2.2",
     "sass": "^1.57.1",
     "typescript": "^5.1.3"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "eslintConfig": {
+    "extends": [
+      "next",
+      "next/core-web-vitals"
+    ]
   }
 }
