--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@vercel/analytics": "^1.1.1",
     "next": "^12.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
