--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "@mui/material": "^5.13.5",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@vercel/analytics": "^1.1.1",
-    "next": "^12.2.2",
+    "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.3.3",
+    "sharp": "^0.33.2",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
+    "eslint-config-next": "^13.5.6",
     "sass": "^1.57.1",
     "typescript": "^5.1.3"
   },
