--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.5",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.9",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
