--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@plaiceholder/next": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.9",
     "next": "^13.5.6",
+    "plaiceholder": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.3.3",
-    "sharp": "^0.33.2",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
@@ -33,7 +34,7 @@
     "typescript": "^5.1.3"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "eslintConfig": {
     "extends": [
