--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "pargeo",
-  "version": "1.2.8",
+  "version": "1.4.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -15,7 +14,6 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@plaiceholder/next": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.9",
     "next": "^13.5.6",
@@ -28,18 +26,10 @@
   "devDependencies": {
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
-    "eslint": "8.19.0",
-    "eslint-config-next": "^13.5.6",
     "sass": "^1.57.1",
     "typescript": "^5.1.3"
   },
   "engines": {
     "node": "20.x"
-  },
-  "eslintConfig": {
-    "extends": [
-      "next",
-      "next/core-web-vitals"
-    ]
   }
 }
