--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@plaiceholder/next": "^3.0.0",
+    "@next/mdx": "^14.1.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.9",
+    "glob": "^10.3.10",
+    "gray-matter": "^4.0.3",
+    "mui-markdown": "^1.1.13",
     "next": "^13.5.6",
     "next-sitemap": "^4.2.3",
     "plaiceholder": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.3.3",
+    "reading-time": "^1.5.0",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
