--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^13.5.6",
     "next-sitemap": "^4.2.3",
     "plaiceholder": "^3.0.0",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.3.3",
