--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,8 @@
     "barcodes",
     "bootcamp",
     "Bootcamp",
+    "cedeterija",
+    "Cedeterija",
     "Codevolution",
     "Coursera",
     "Discogs",
