--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@next/mdx": "^14.1.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.9",
+    "eslint": "^8.56.0",
     "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
     "mui-markdown": "^1.1.13",
     "next": "^13.5.6",
     "next-sitemap": "^4.2.3",
-    "plaiceholder": "^3.0.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +35,6 @@
   "devDependencies": {
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
-    "sass": "^1.57.1",
     "typescript": "^5.1.3"
   },
   "engines": {
