static imports for images and next/font optimization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,11 +23,13 @@
     "barcodes",
     "bootcamp",
     "Bootcamp",
+    "Caffe",
     "cedeterija",
     "Cedeterija",
     "Codevolution",
     "Coursera",
     "Discogs",
+    "effic",
     "Ferreira",
     "Filho",
     "frontmatter",
